18756
```scala
trait T {
  protected def s: String
}

case class G(override protected val s: String) extends T
```

This code results in a compile error:
```scala
<console>:11: error: value s$1 overrides nothing
       case class G(override protected val s: String) extends T
                  ^
```

More detailed explanation of this error is in
http://stackoverflow.com/questions/21019966/scala-override-protected-val-results-in-error-when-defining-case-class-constr
